[project]
name = "wear-face-mask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = ["face-alignment>=1.4.1", "torch>=2.6.0"]

[tool.setuptools.package-data]
wear_face_mask = ["res/mask.png"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
